Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120033

Binding not evaluated

    XMLWordPrintable

Details

    • bb7ba7667 (dev), ac17f948c (6.7), 118f9999f (6.6), 3f9cfda16 (tqtc/lts-6.5), 38dac54f6 (tqtc/lts-6.2)

    Description

      As reported in the linked bug, for some reason the binding to y does not appear to get evaluated.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              olivier.decanniere Olivier De Cannière
              fabiankosmale Fabian Kosmale
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: