Controls: Bypass bindings when setting x and y in resizeBackground

Using setX() and setY() instead can remove the binding for them.

Fixes: QTBUG-120033
Pick-to: 6.2
Change-Id: I77fc5360b2d10436b5e258b5f0ceb96b949eccbe
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit bb7ba7667b4cf3565aa1849d08cc71b9ac011e77)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit ac17f948cdb46e0fe900c72af35fc3ac84e29000)
(cherry picked from commit 118f9999fe6438261faa697905aa89b1557c3774)
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>